[package]
name = "rustyfiles"
version = "2.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.9", features = ["multipart"] }
dotenv = "0.15.0"
env_logger = "0.11.8"
http-body-util = "0.1.3"
image = { version = "0.25.6", features = ["webp"] }
log = "0.4.27"
mime_guess = "2.0.5"
ravif = { version = "0.11.12", default-features = false }
reqwest = { version = "0.12.22", features = ["json"] }
rgb = "0.8.37"
tempfile = "3.20.0"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "fs"] }
tokio-util = { version = "0.7.16", features = ["io"] }
tower = { version = "0.4.13", features = ["util"] }
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
url = "2.5.4"
webp = "0.3.0"
